packages/rocket/rocket-0.5.0-rc.2/core/codegen/tests/ui-fail-stable/from_form_type_errors.stderr
error[E0277]: the trait bound `Unknown: FromFormField<'_>` is not satisfied
 --> $DIR/from_form_type_errors.rs:7:12
  |
7 |     field: Unknown,
  |            ^^^^^^^ the trait `FromFormField<'_>` is not implemented for `Unknown`
  |
  = note: required because of the requirements on the impl of `FromForm<'r>` for `Unknown`

error[E0277]: the trait bound `Foo<usize>: FromFormField<'_>` is not satisfied
  --> $DIR/from_form_type_errors.rs:14:12
   |
14 |     field: Foo<usize>,
   |            ^^^ the trait `FromFormField<'_>` is not implemented for `Foo<usize>`
   |
   = note: required because of the requirements on the impl of `FromForm<'r>` for `Foo<usize>`
