packages/rocket/rocket-0.5.0-rc.2/core/codegen/tests/ui-fail-stable/from_form_type_errors.rs
#[macro_use] extern crate rocket;

struct Unknown;

#[derive(FromForm)]
struct BadType3 {
    field: Unknown,
}

struct Foo<T>(T);

#[derive(FromForm)]
struct Other {
    field: Foo<usize>,
}

fn main() {  }
